syntax = "proto3";

option go_package = "logkv/proto";

service Raft {
	rpc AddPeer(AddPeerReq) returns (AddPeerAck) {}
}

message AddPeerReq {
	string word = 1;
}

message AddPeerAck {
	uint64 commit_index = 1;
}
 